--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -36,4 +36,5 @@
   {% if author.researchgate %}<a href="https://www.researchgate.net/profile/{{ author.researchgate }}" class="author-social" target="_blank"><i class="ai ai-fw ai-researchgate"></i> ResearchGate</a>{% endif %}
   {% if author.mendeley %}<a href="https://www.mendeley.com/profiles/{{ author.mendeley }}" class="author-social" target="_blank"><i class="ai ai-fw ai-mendeley"></i> Mendeley</a>{% endif %}
   {% if author.orcid %}<a href="https://orcid.org/{{ author.orcid }}" class="author-social" target="_blank"><i class="ai ai-fw ai-orcid"></i> Orcid</a>{% endif %}
+  {% if author.kudos %}<a href="https://www.growkudos.com/profile/{{ author.orcid }}" class="author-social" target="_blank"><i class="ai ai-fw ai-kudos"></i> Kudos</a>{% endif %}
 </div>
