--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -37,4 +37,6 @@
   {% if author.mendeley %}<a href="https://www.mendeley.com/profiles/{{ author.mendeley }}" class="author-social" target="_blank"><i class="ai ai-fw ai-mendeley"></i> Mendeley</a>{% endif %}
   {% if author.orcid %}<a href="https://orcid.org/{{ author.orcid }}" class="author-social" target="_blank"><i class="ai ai-fw ai-orcid"></i> Orcid</a>{% endif %}
   {% if author.kudos %}<a href="https://www.growkudos.com/profile/{{ author.kudos }}" class="author-social" target="_blank"><i class="fa fa-fw fa-circle-o"></i> Kudos</a>{% endif %}
+  {% if author.publons %}<a href="https://publons.com/researcher/1791580/{{ author.publons }}" class="author-social" target="_blank"><i class="fa fa-fw fa-product-hunt"></i> Publons</a>{% endif %}
+
 </div>
